--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -13,7 +13,6 @@ set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
 set_real_ip_from 104.192.1.138;
-set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -133,6 +132,11 @@ set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 142.93.6.21;
 set_real_ip_from 143.110.156.176;
+set_real_ip_from 144.172.118.4;
+set_real_ip_from 144.172.118.47;
+set_real_ip_from 144.172.118.55;
+set_real_ip_from 144.172.118.76;
+set_real_ip_from 144.172.118.90;
 set_real_ip_from 144.24.197.112;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
@@ -152,7 +156,6 @@ set_real_ip_from 152.53.53.154;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.35;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -686,7 +689,6 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -854,8 +856,45 @@ set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
+set_real_ip_from 23.129.64.131;
+set_real_ip_from 23.129.64.132;
+set_real_ip_from 23.129.64.133;
+set_real_ip_from 23.129.64.134;
+set_real_ip_from 23.129.64.135;
+set_real_ip_from 23.129.64.136;
+set_real_ip_from 23.129.64.137;
+set_real_ip_from 23.129.64.138;
+set_real_ip_from 23.129.64.139;
+set_real_ip_from 23.129.64.140;
+set_real_ip_from 23.129.64.141;
+set_real_ip_from 23.129.64.142;
+set_real_ip_from 23.129.64.143;
+set_real_ip_from 23.129.64.144;
+set_real_ip_from 23.129.64.145;
+set_real_ip_from 23.129.64.146;
+set_real_ip_from 23.129.64.147;
+set_real_ip_from 23.129.64.148;
+set_real_ip_from 23.129.64.149;
+set_real_ip_from 23.129.64.150;
 set_real_ip_from 23.129.64.211;
-set_real_ip_from 23.129.64.212;
+set_real_ip_from 23.129.64.213;
+set_real_ip_from 23.129.64.214;
+set_real_ip_from 23.129.64.215;
+set_real_ip_from 23.129.64.216;
+set_real_ip_from 23.129.64.217;
+set_real_ip_from 23.129.64.218;
+set_real_ip_from 23.129.64.219;
+set_real_ip_from 23.129.64.220;
+set_real_ip_from 23.129.64.221;
+set_real_ip_from 23.129.64.222;
+set_real_ip_from 23.129.64.223;
+set_real_ip_from 23.129.64.224;
+set_real_ip_from 23.129.64.225;
+set_real_ip_from 23.129.64.226;
+set_real_ip_from 23.129.64.227;
+set_real_ip_from 23.129.64.228;
+set_real_ip_from 23.129.64.229;
+set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.250.34;
 set_real_ip_from 23.137.250.83;
@@ -893,6 +932,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
 set_real_ip_from 23.94.211.25;
@@ -918,6 +958,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::5;
@@ -1033,8 +1074,10 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
+set_real_ip_from 2605:6400:d814:1b8::4;
+set_real_ip_from 2605:6400:d814:2775::;
+set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
-set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::3dde;
@@ -1043,8 +1086,45 @@ set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
 set_real_ip_from 2607:f130:0:10d::64;
+set_real_ip_from 2620:18c:0:192::131;
+set_real_ip_from 2620:18c:0:192::132;
+set_real_ip_from 2620:18c:0:192::133;
+set_real_ip_from 2620:18c:0:192::134;
+set_real_ip_from 2620:18c:0:192::135;
+set_real_ip_from 2620:18c:0:192::136;
+set_real_ip_from 2620:18c:0:192::137;
+set_real_ip_from 2620:18c:0:192::138;
+set_real_ip_from 2620:18c:0:192::139;
+set_real_ip_from 2620:18c:0:192::140;
+set_real_ip_from 2620:18c:0:192::141;
+set_real_ip_from 2620:18c:0:192::142;
+set_real_ip_from 2620:18c:0:192::143;
+set_real_ip_from 2620:18c:0:192::144;
+set_real_ip_from 2620:18c:0:192::145;
+set_real_ip_from 2620:18c:0:192::146;
+set_real_ip_from 2620:18c:0:192::147;
+set_real_ip_from 2620:18c:0:192::148;
+set_real_ip_from 2620:18c:0:192::149;
+set_real_ip_from 2620:18c:0:192::150;
 set_real_ip_from 2620:18c:0:192::211;
-set_real_ip_from 2620:18c:0:192::212;
+set_real_ip_from 2620:18c:0:192::213;
+set_real_ip_from 2620:18c:0:192::214;
+set_real_ip_from 2620:18c:0:192::215;
+set_real_ip_from 2620:18c:0:192::216;
+set_real_ip_from 2620:18c:0:192::217;
+set_real_ip_from 2620:18c:0:192::218;
+set_real_ip_from 2620:18c:0:192::219;
+set_real_ip_from 2620:18c:0:192::220;
+set_real_ip_from 2620:18c:0:192::221;
+set_real_ip_from 2620:18c:0:192::222;
+set_real_ip_from 2620:18c:0:192::223;
+set_real_ip_from 2620:18c:0:192::224;
+set_real_ip_from 2620:18c:0:192::225;
+set_real_ip_from 2620:18c:0:192::226;
+set_real_ip_from 2620:18c:0:192::227;
+set_real_ip_from 2620:18c:0:192::228;
+set_real_ip_from 2620:18c:0:192::229;
+set_real_ip_from 2620:18c:0:192::230;
 set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
@@ -1419,7 +1499,9 @@ set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.193.231.144;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 35.207.132.54;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
@@ -1557,7 +1639,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.166.59.56;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
@@ -1702,6 +1783,7 @@ set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.123.12.164;
 set_real_ip_from 93.123.12.240;
+set_real_ip_from 93.157.106.177;
 set_real_ip_from 93.90.74.31;
 set_real_ip_from 93.95.225.141;
 set_real_ip_from 93.95.228.125;
