--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,6 +13,7 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
 allow 104.192.1.138;
+allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
@@ -134,7 +135,6 @@ allow 142.93.6.21;
 allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.47;
-allow 144.172.118.55;
 allow 144.172.118.76;
 allow 144.172.118.90;
 allow 144.24.197.112;
@@ -156,7 +156,6 @@ allow 152.53.53.154;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.30.210.35;
-allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -362,7 +361,6 @@ allow 185.220.101.147;
 allow 185.220.101.149;
 allow 185.220.101.15;
 allow 185.220.101.150;
-allow 185.220.101.152;
 allow 185.220.101.153;
 allow 185.220.101.154;
 allow 185.220.101.155;
@@ -689,7 +687,6 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
-allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4060:a01f::12a6;
 allow 2001:1af8:4700:a114:6::1;
@@ -1079,6 +1076,7 @@ allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:2775::;
 allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
+allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
 allow 2607:5300:205:200::163a;
 allow 2607:5300:205:200::3dde;
@@ -1309,7 +1307,6 @@ allow 2a0b:f4c2:1::146;
 allow 2a0b:f4c2:1::147;
 allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::150;
-allow 2a0b:f4c2:1::152;
 allow 2a0b:f4c2:1::153;
 allow 2a0b:f4c2:1::154;
 allow 2a0b:f4c2:1::155;
@@ -1501,8 +1498,7 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.175.96.13;
-allow 35.207.132.54;
+allow 35.207.185.114;
 allow 35.215.211.255;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1525,7 +1521,6 @@ allow 45.12.3.80;
 allow 45.132.246.245;
 allow 45.133.16.36;
 allow 45.134.225.36;
-allow 45.135.132.20;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.142;
@@ -1612,7 +1607,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1641,6 +1635,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.209.159.17;
 allow 5.42.80.232;
 allow 5.42.80.233;
 allow 5.42.80.234;
