--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -248,6 +247,7 @@ deny 2605:6400:d814:1b8::4;
 deny 2605:6400:d814:2775::;
 deny 2605:6400:d814:4181::1;
 deny 2605:a140:2186:5418::1;
+deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
 deny 2607:5300:205:200::163a;
 deny 2607:5300:205:200::3dde;
@@ -477,7 +477,6 @@ deny 2a0b:f4c2:1::146;
 deny 2a0b:f4c2:1::147;
 deny 2a0b:f4c2:1::149;
 deny 2a0b:f4c2:1::150;
-deny 2a0b:f4c2:1::152;
 deny 2a0b:f4c2:1::153;
 deny 2a0b:f4c2:1::154;
 deny 2a0b:f4c2:1::155;
