--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -13,6 +13,7 @@ set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.28.52.93;
 set_real_ip_from 104.192.1.138;
+set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -134,7 +135,6 @@ set_real_ip_from 142.93.6.21;
 set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.47;
-set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.76;
 set_real_ip_from 144.172.118.90;
 set_real_ip_from 144.24.197.112;
@@ -156,7 +156,6 @@ set_real_ip_from 152.53.53.154;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.30.210.35;
-set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -362,7 +361,6 @@ set_real_ip_from 185.220.101.147;
 set_real_ip_from 185.220.101.149;
 set_real_ip_from 185.220.101.15;
 set_real_ip_from 185.220.101.150;
-set_real_ip_from 185.220.101.152;
 set_real_ip_from 185.220.101.153;
 set_real_ip_from 185.220.101.154;
 set_real_ip_from 185.220.101.155;
@@ -689,7 +687,6 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
-set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4060:a01f::12a6;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
@@ -1079,6 +1076,7 @@ set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:6400:d814:2775::;
 set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
+set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:205:200::163a;
 set_real_ip_from 2607:5300:205:200::3dde;
@@ -1309,7 +1307,6 @@ set_real_ip_from 2a0b:f4c2:1::146;
 set_real_ip_from 2a0b:f4c2:1::147;
 set_real_ip_from 2a0b:f4c2:1::149;
 set_real_ip_from 2a0b:f4c2:1::150;
-set_real_ip_from 2a0b:f4c2:1::152;
 set_real_ip_from 2a0b:f4c2:1::153;
 set_real_ip_from 2a0b:f4c2:1::154;
 set_real_ip_from 2a0b:f4c2:1::155;
@@ -1501,8 +1498,7 @@ set_real_ip_from 31.13.195.60;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
-set_real_ip_from 35.175.96.13;
-set_real_ip_from 35.207.132.54;
+set_real_ip_from 35.207.185.114;
 set_real_ip_from 35.215.211.255;
 set_real_ip_from 37.114.41.119;
 set_real_ip_from 37.1.201.144;
@@ -1525,7 +1521,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.133.16.36;
 set_real_ip_from 45.134.225.36;
-set_real_ip_from 45.135.132.20;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
 set_real_ip_from 45.138.16.142;
@@ -1612,7 +1607,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1641,6 +1635,7 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
+set_real_ip_from 54.209.159.17;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
 set_real_ip_from 5.42.80.234;
