--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,3 +1,4 @@
+allow 100.28.74.78;
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
@@ -108,6 +109,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -204,7 +206,6 @@ allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
-allow 176.58.89.182;
 allow 176.97.114.202;
 allow 178.162.209.56;
 allow 178.17.170.125;
@@ -237,6 +238,7 @@ allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.167.205;
+allow 179.43.179.58;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
@@ -293,6 +295,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -803,6 +806,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -918,7 +922,15 @@ allow 23.154.177.20;
 allow 23.154.177.21;
 allow 23.154.177.22;
 allow 23.154.177.23;
+allow 23.154.177.24;
+allow 23.154.177.25;
+allow 23.154.177.26;
+allow 23.154.177.27;
+allow 23.154.177.28;
+allow 23.154.177.29;
 allow 23.154.177.3;
+allow 23.154.177.30;
+allow 23.154.177.31;
 allow 23.154.177.4;
 allow 23.154.177.5;
 allow 23.154.177.6;
@@ -1149,6 +1161,8 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
+allow 2a02:29b8:dc01:1801::3;
+allow 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1495,7 +1509,6 @@ allow 31.13.195.60;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
-allow 35.207.161.75;
 allow 35.215.223.6;
 allow 37.114.41.119;
 allow 37.1.201.144;
@@ -1512,7 +1525,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 3.95.45.190;
 allow 41.216.183.87;
 allow 45.11.59.28;
 allow 45.118.133.44;
@@ -1607,7 +1619,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1697,6 +1708,7 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
+allow 81.17.20.58;
 allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.119;
