--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -110,6 +110,7 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:ac8:22:43::20e5:a7d7;
+deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -323,6 +324,8 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
+deny 2a02:29b8:dc01:1801::3;
+deny 2a02:29b8:dc01:1801:42:51ff:fe11:143a;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:898:218::1;
